# bazmly

./: docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0c779ae3edf2_add_email_is_verified_to_users_add_.py  1924110a8de0_initial.py  8ad0cdb3f263_add_google_id_and_nullable_password_to_.py
app/core/: config.py  dependencies.py  email.py  exceptions.py  security.py
app/core/database/: id_uuid_pk.py  session.py  time_stamp_mixin.py
app/core/repository/: base.py
app/core/schemas/: base.py
app/modules/: routers.py
app/modules/auth/: exceptions.py  router.py  schemas.py  service.py  verification_model.py
app/modules/menu_item/: exceptions.py  model.py  router.py  schemas.py  service.py
app/modules/order/: enums.py  exceptions.py  model.py  router.py  schemas.py  service.py
app/modules/order_item/: exceptions.py  model.py  router.py  schemas.py  service.py
app/modules/reservation/: enums.py  exceptions.py  model.py  router.py  schemas.py  service.py
app/modules/restaurant/: exceptions.py  model.py  router.py  schemas.py  service.py
app/modules/review/: exceptions.py  model.py  router.py  schemas.py  service.py
app/modules/user/: exceptions.py  model.py  router.py  schemas.py  service.py
app/modules/venue_image/: exceptions.py  model.py  router.py  schemas.py  service.py
