[project]
name = "bazmly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.0",
    "sqlalchemy>=2.0.51",
    "asyncpg>=0.30.0",
    "bcrypt>=4.2.0",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.34.0",
    "alembic>=1.18.4",
]
